--- a/app/src/main/res/layout/item_sub_events.xml
+++ b/app/src/main/res/layout/item_sub_events.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/llEvents"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -16,9 +17,9 @@
             android:id="@+id/ivIcon"
             android:layout_width="@dimen/sub_action_image"
             android:layout_height="@dimen/sub_action_image"
+            android:layout_gravity="center"
             android:layout_marginEnd="2dp"
             android:layout_marginBottom="2dp"
-            android:layout_gravity="center"
             android:src="@drawable/events_icon"
             tools:ignore="ContentDescription" />
     </FrameLayout>
